fix: overflow content on cart page

--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -30,4 +30,6 @@
 
   height: 80%;
   width: 60%;
+
+  overflow: auto;
 }
